# ml_genn

./: .gitignore  .readthedocs.yaml  Jenkinsfile  conv.py  conversion_example.py  conversion_example_2.py  conversion_example_OLD.py  data_norm.py  model.py  readme.md  setup.py  spike_norm.py
ml_genn/: __init__.py  compiled_model.py  connection.py  layer.py  model.py  population.py  pyproject.toml  save_load.py  setup.py
ml_genn/compilers/: compiled_model.py  compiler.py  weight_update_models.py
ml_genn/connectivity/: __init__.py  avepool2d_conv2d.py  connectivity.py  conv2d.py  conv_2d.py  convtranspose2d.py  dense.py  enum.py  helper.py  identity.py  identity_synapses.py  one_to_one.py  sparse_base.py
ml_genn/converters/: __init__.py  data_norm.py  enum.py  few_spike.py  rate_based.py  simple.py  spike_norm.py
ml_genn/examples/: .gitignore  brunel.py  simple_mnist.py  weights_0_1.npy
ml_genn/initializers/: __init__.py  initializer.py  uniform.py
ml_genn/layers/: __init__.py  avepool2d.py  avepool2d_conv2d.py  avepool2d_conv2d_synapses.py  avepool2d_dense.py  avepool2d_dense_synapses.py  avepool2d_synapses.py  base_layer.py  base_neurons.py  base_synapses.py  conv2d.py  conv2d_synapses.py  convtranspose2d_synapses.py  dense_synapses.py  enum.py  fs_input_neurons.py  fs_neurons.py  helper.py  identity.py  identity_synapses.py  if_input_neurons.py  if_neurons.py  input_layer.py  input_neurons.py  layer.py  neurons.py  poisson_input_neurons.py  spike_input_neurons.py  weight_update_models.py
ml_genn/ml_genn/: __init__.py  auto_tools.py  compiled_model.py  (+9 more)
(+407 files in other folders)
